# rs-esp32c3-slint-st7735-demo

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
ui/: main.slint
